compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__blocks_get_preserved_when_needed.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 267
expression: "\npub fn main() {\n    { 4 |> make_adder }(6)\n}\n\nfn make_adder(a) {\n  fn(b) { a + b }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    { 4 |> make_adder }(6)
}

fn make_adder(a) {
  fn(b) { a + b }
}


----- COMPILED JAVASCRIPT
function make_adder(a) {
  return (b) => { return a + b; };
}

export function main() {
  let _block;
  let _pipe = 4;
  _block = make_adder(_pipe);
  return _block(6);
}
