compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__blocks_get_preserved_when_needed2.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 282
expression: "\npub fn main() {\n    fn(x) { 1 + x }(2) * 3\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    fn(x) { 1 + x }(2) * 3
}


----- COMPILED JAVASCRIPT
export function main() {
  return (1 + 2) * 3;
}
