compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inline_anonymous_function_call.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 219
expression: "\npub fn main() {\n  fn(a, b) { #(a, b) }(42, False)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  fn(a, b) { #(a, b) }(42, False)
}


----- COMPILED JAVASCRIPT
export function main() {
  return [42, false];
}
