compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inline_anonymous_function_in_pipe.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 230
expression: "\npub fn main() {\n  1 |> fn(x) { x + 1 } |> fn(y) { y * y }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  1 |> fn(x) { x + 1 } |> fn(y) { y * y }
}


----- COMPILED JAVASCRIPT
export function main() {
  let _pipe = 1;
  let _pipe$1 = _pipe + 1;
  {
    let y = _pipe$1;
    return y * y;
  }
}
