compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inline_function_capture_in_pipe.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 243
expression: "\npub fn main() {\n  1 |> add(4, _)\n}\n\nfn add(a, b) { a + b }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  1 |> add(4, _)
}

fn add(a, b) { a + b }


----- COMPILED JAVASCRIPT
function add(a, b) {
  return a + b;
}

export function main() {
  let _pipe = 1;
  return add(4, _pipe);
}
