compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inline_function_which_calls_other_function.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 100
expression: "\nimport testing\n\npub fn main() {\n  testing.always_inline(Ok(10), Error)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import testing

pub fn main() {
  testing.always_inline(Ok(10), Error)
}


----- COMPILED JAVASCRIPT
import * as $testing from "../../gleam_stdlib/testing.mjs";
import { Ok, Error } from "../gleam.mjs";

export function main() {
  let $ = new Ok(10);
  if ($ instanceof Ok) {
    let value = $[0];
    return new Error(value);
  } else {
    return $;
  }
}
