compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inline_function_with_use.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 125
expression: "\nimport gleam/bool\n\npub fn divide(a, b) {\n  use <- bool.guard(when: b == 0, return: 0)\n  a / b\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam/bool

pub fn divide(a, b) {
  use <- bool.guard(when: b == 0, return: 0)
  a / b
}


----- COMPILED JAVASCRIPT
import * as $bool from "../../gleam_stdlib/gleam/bool.mjs";
import { divideInt } from "../gleam.mjs";

export function divide(a, b) {
  let $ = b === 0;
  if ($) {
    return 0;
  } else {
    return divideInt(a, b);
  }
}
