compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__inlining__inline_higher_order_function.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/inlining.rs
assertion_line: 45
expression: "\nimport gleam/result\n\npub fn main() {\n  result.map(over: Ok(10), with: double)\n}\n\nfn double(x) { x + x }\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam/result

pub fn main() {
  result.map(over: Ok(10), with: double)
}

fn double(x) { x + x }


----- COMPILED JAVASCRIPT
import * as $result from "../../gleam_stdlib/gleam/result.mjs";
import { Ok } from "../gleam.mjs";

function double(x) {
  return x + x;
}

export function main() {
  let $ = new Ok(10);
  if ($ instanceof Ok) {
    let value = $[0];
    return new Ok(double(value));
  } else {
    return $;
  }
}
